allow multiple compositions by using lists